--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,21 +2,21 @@
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
-spring.thymeleaf.content-type=text/html
 spring.thymeleaf.enabled=true
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.mode=HTML5
 # mybatis
-mybatis.type-aliases-package=com.imooc.miaosha.domain
+mybatis.type-aliases-package=com.mobilephone.seckill.domain
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.default-fetch-size=100
 mybatis.configuration.default-statement-timeout=3000
-mybatis.mapperLocations = classpath:com/imooc/miaosha/dao/*.xml
+mybatis.mapperLocations=classpath:com/mobilephone/seckill/dao/*.xml
 # druid
-spring.datasource.url=jdbc:mysql://192.168.1.126:3306/miaosha?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
+spring.datasource.url=jdbc:mysql://192.168.1.126:3306/seckill?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#◊‘∂Ø≈‰÷√
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.filters=stat
 spring.datasource.maxActive=1000
@@ -41,10 +41,8 @@ redis.poolMaxIdle=1000
 redis.poolMaxWait=1000
 #static
 spring.resources.add-mappings=true
-spring.resources.cache-period= 3600
 spring.resources.chain.cache=true 
 spring.resources.chain.enabled=true
-spring.resources.chain.gzipped=true
 spring.resources.chain.html-application-cache=true
 spring.resources.static-locations=classpath:/static/
 #rabbitmq
@@ -53,7 +51,6 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.virtual-host=/
 spring.rabbitmq.connection-timeout=15000
-
 spring.rabbitmq.publisher-confirms=true
 spring.rabbitmq.publisher-returns=true
 spring.rabbitmq.template.mandatory=true
