改善了前端页面的信息展示， 改善了用户订单的详细信息 完成了一个后台管理系统

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ spring.datasource.testOnReturn=false
 spring.datasource.poolPreparedStatements=true
 spring.datasource.maxOpenPreparedStatements=20
 #redis
-redis.host=192.168.1.177
+redis.host=192.168.1.104
 redis.port=6379
 redis.timeout=500
 #redis.password=123456
@@ -46,7 +46,7 @@ spring.resources.chain.enabled=true
 spring.resources.chain.html-application-cache=true
 spring.resources.static-locations=classpath:/static/
 #rabbitmq
-spring.rabbitmq.addresses=192.168.1.177:5672
+spring.rabbitmq.addresses=192.168.1.104:5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.virtual-host=/
@@ -54,3 +54,6 @@ spring.rabbitmq.connection-timeout=15000
 spring.rabbitmq.publisher-confirms=true
 spring.rabbitmq.publisher-returns=true
 spring.rabbitmq.template.mandatory=true
+
+#freemarker
+spring.freemarker.settings.number_format=0.##
