--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ mybatis.configuration.default-fetch-size=100
 mybatis.configuration.default-statement-timeout=3000
 mybatis.mapperLocations=classpath:com/mobilephone/seckill/dao/*.xml
 # druid
-spring.datasource.url=jdbc:mysql://192.168.1.126:3306/seckill?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
+spring.datasource.url=jdbc:mysql://47.105.160.177:3306/seckill?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
 #◊‘∂Ø≈‰÷√
@@ -32,10 +32,11 @@ spring.datasource.testOnReturn=false
 spring.datasource.poolPreparedStatements=true
 spring.datasource.maxOpenPreparedStatements=20
 #redis
-redis.host=192.168.1.104
+#redis.host=192.168.1.119
 redis.port=6379
+redis.host=47.105.160.177
 redis.timeout=500
-#redis.password=123456
+redis.password=950317
 redis.poolMaxTotal=2000
 redis.poolMaxIdle=1000
 redis.poolMaxWait=1000
@@ -46,7 +47,7 @@ spring.resources.chain.enabled=true
 spring.resources.chain.html-application-cache=true
 spring.resources.static-locations=classpath:/static/
 #rabbitmq
-spring.rabbitmq.addresses=192.168.1.104:5672
+spring.rabbitmq.addresses=47.105.160.177:5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.virtual-host=/
